dev_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  dev
spec:
  hard:
    pods: "10"
    requests.cpu: "4"
    requests.memory: "4Gi"
    limits.cpu: "8"
    limits.memory: "8Gi"


# kubectl create namespace <namespace_name>
# kubectl get namespace
# kubectl get ns
# kubectl config set-context $(kubectl config current-context) --namespace=<namespace_name>
# kubectl config view | grep namespace
# k get ns --no-headers | wc -l 
# kubectl delete namespace <namespace_name>
# k get pods -n research --no-headers | wc -l
