affinity_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: affinity-pod
  labels:
    app: nginx
    tier: frontend
spec:
  tolerations:
    - key : "env"
      operator: "Equal"
      value: "production"
      effect: "NoSchedule"
  nodeSelector:
    disktype: ssd
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: disktype
                operator: In
                values:
                  - ssd
                  - hdd
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
