daemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: elasticsearch
  namespace: kube-system
spec:
  selector:
    matchLabels:
       log: fluentd
  template:
    metadata:
      name: fluentd
      labels:
        log: fluentd
    spec:
      containers:
        - name: fluentd
          image: registry.k8s.io/fluentd-elasticsearch:1.20
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"


# k get ds
#  k describe ds elasticsearch
# k delete ds elasticsearch
