multipleScheduler_kubeadm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-custome-scheduler
  namespace: kube-system
spec:
  containers:
    - image:  k8s.gcr.io/kube-scheduler:v1.18.6
      name: my-scheduler
      command:
        - kube-scheduler
        - --address=127.0.0.1
        - --kubeconfig=/etc/kubernetes/scheduler.conf
        - --leader-elect=true
        - --config=/etc/kubernetes/my-scheduler-config.yaml
      resources:
        requests:
          cpu: 100m
        limits:
          cpu: 100m
          memory: 200Mi


# apiVersion : kubescheduler.config.k8s.io/v1
# kind: KubeSchedulerConfiguration
# profiles:
#  - schedulerName: my-scheduler
# leaderElection:
#  leaderElect: true
#  resourceLock: endpoints
#  resourceName: kube-scheduler
#  resourceNamespace: kube-system
