staticPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-busybox
  labels:
    app: busybox
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["/bin/sh", "-c", "sleep 1000"]
      resources:
        limits:
          memory: "64Mi"
          cpu: "500m"
 
# kubectl run --restart=Never --image=busybox static-busybox --dry-run=client -o yaml --command -- sleep 1000 > /etc/kubernetes/manifests/static-busybox.yaml
# kubectl run --restart=Never --image=busybox static-busybox --dry-run=client --command -- sleep 1000 -o yaml > /etc/kubernetes/manifests/static-busybox.yaml
