volume_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volumes-pod
  labels:
    app: volumes
spec:
  containers:
  - name: volumes-container
    image: nginx
    volumeMounts:
      - mountPath: /var/www/html
        name: my-volume
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  volumes:
    - name: my-volume
      hostPath:
        path: /data
        type: DirectoryOrCreate
    - name: my-pvc
      persistentVolumeClaim:
        claimName: my-pvc
