networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
  namespace: dev  # Ensure you specify the namespace where this policy applies
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
        - namespaceSelector:
            matchLabels:
              name: dev
      ports:
        - port: 5000
          protocol: TCP
  egress:  
    - to:
        - podSelector:
            matchLabels:
              app: nginx
        - namespaceSelector:
            matchLabels:
              name: dev
        - ipBlock:
            cidr: 10.10.10.10/12
      ports:
        - port: 5000
          protocol: TCP
